// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NavBar > renders properly when logged in 1`] = `
"<nav data-v-2202255b="" aria-label="Primary">
  <ul data-v-2202255b="">
    <li data-v-2202255b=""><a data-v-2202255b="" aria-roledescription="logo" aria-label="Click the logo to go home"><strong data-v-2202255b="">Novu.Link</strong></a></li>
  </ul>
  <ul data-v-2202255b="">
    <li data-v-2202255b=""><a role="button" href="[object Object]">
        <!-- @slot This is the default slot which contains the text.  -->New magic link
      </a></li>
    <!--v-if-->
    <li data-v-2202255b=""><button data-v-2202255b="" type="button" tabindex="0" class="outline" aria-label="Open the menu"><span data-v-2202255b="" aria-hidden="true">☰</span></button></li>
  </ul>
</nav>
<aside data-v-2202255b="" class="container" style="display: none;">
  <nav data-v-2202255b="" aria-label="Aside">
    <ul data-v-2202255b="">
      <!-- The users team settings -->
      <li data-v-2202255b="" aria-busy="false">
        <details data-v-2202255b="" class="dropdown">
          <summary data-v-2202255b="" aria-busy="false">Your Team</summary>
          <ul data-v-2202255b="">
            <li data-v-2202255b=""><a data-v-2202255b="">Team Settings</a></li>
            <li data-v-2202255b=""><a data-v-2202255b="">Create New Team</a></li><!-- Divider -->
            <li data-v-2202255b="">
              <hr data-v-2202255b="">
            </li><!-- Switch teams section -->
          </ul>
        </details>
      </li>
      <li data-v-2202255b=""><a data-v-2202255b="">Dashboard</a></li>
      <li data-v-2202255b=""><a data-v-2202255b="">Magic links</a></li>
      <li data-v-2202255b=""><a data-v-2202255b="">Analytics</a></li>
      <li data-v-2202255b=""><a data-v-2202255b="">Shop QR Products</a></li>
      <li data-v-2202255b="" aria-busy="false">
        <details data-v-2202255b="" class="dropdown">
          <summary data-v-2202255b="" aria-busy="false">My Account</summary>
          <ul data-v-2202255b="">
            <li data-v-2202255b=""><a data-v-2202255b="">Settings</a></li>
            <li data-v-2202255b=""><a data-v-2202255b="">Logout</a></li>
          </ul>
        </details>
      </li>
      <li data-v-2202255b=""><a role="button" href="[object Object]">
          <!-- @slot This is the default slot which contains the text.  -->New magic link
        </a></li>
    </ul>
  </nav><button data-v-2202255b="" type="button" tabindex="0" aria-label="Close the menu" class="outline close"><span data-v-2202255b="" aria-hidden="true">✖</span></button>
</aside>"
`;

exports[`NavBar > renders properly when logged out 1`] = `
"<nav data-v-2202255b="" aria-label="Primary">
  <ul data-v-2202255b="">
    <li data-v-2202255b=""><a data-v-2202255b="" aria-roledescription="logo" aria-label="Click the logo to go home"><strong data-v-2202255b=""></strong></a></li>
  </ul>
  <ul data-v-2202255b="">
    <li data-v-2202255b=""><a role="button" href="[object Object]">
        <!-- @slot This is the default slot which contains the text.  -->New magic link
      </a></li>
    <li data-v-2202255b=""><a data-v-2202255b="">Login</a></li>
    <li data-v-2202255b=""><button data-v-2202255b="" type="button" tabindex="0" class="outline" aria-label="Open the menu"><span data-v-2202255b="" aria-hidden="true">☰</span></button></li>
  </ul>
</nav>
<aside data-v-2202255b="" class="container" style="display: none;">
  <nav data-v-2202255b="" aria-label="Aside">
    <ul data-v-2202255b="">
      <li data-v-2202255b=""><a data-v-2202255b="">Home</a></li>
      <li data-v-2202255b=""><a data-v-2202255b="">Features</a></li>
      <li data-v-2202255b=""><a data-v-2202255b="">Pricing</a></li>
      <li data-v-2202255b=""><a data-v-2202255b="">Shop QR Products</a></li>
      <li data-v-2202255b=""><a data-v-2202255b="">Login</a></li>
      <li data-v-2202255b=""><a data-v-2202255b="">Sign up</a></li>
      <li data-v-2202255b=""><a role="button" href="[object Object]">
          <!-- @slot This is the default slot which contains the text.  -->New magic link
        </a></li>
    </ul>
  </nav><button data-v-2202255b="" type="button" tabindex="0" aria-label="Close the menu" class="outline close"><span data-v-2202255b="" aria-hidden="true">✖</span></button>
</aside>"
`;
